fixed read more/less button to be more readable and minified script files

--- a/scss/module/_section-projects.scss
+++ b/scss/module/_section-projects.scss
@@ -24,3 +24,7 @@
   margin-top: 20px;
   font-size: 1.2em;
 }
+
+.read-more, .read-less {
+  font-weight: bold;
+}
